apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@file_uploads.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "&metrics.non_zero()"
---
- name: apollo.router.config.file_uploads.multipart
  data:
    datapoints:
      - value: 1
        attributes:
          opt.limits.max_file_size: 1mb
          opt.limits.max_files: 10
          opt.limits.max_overhead_size: 64kb
