apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@incremental_planner.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.incremental_planner
  data:
    datapoints:
      - value: 1
        attributes: {}
- name: apollo.router.config.native_connectors
  data:
    datapoints:
      - value: 1
        attributes: {}
