apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@incremental_planning.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
assertion_line: 711
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.incremental_planner
  data:
    datapoints:
      - value: 1
        attributes: {}
