apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@jwt.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.authentication.jwt
  data:
    datapoints:
      - value: 1
        attributes:
          opt.on_error: redacted_error
