apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@limits.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "&metrics.non_zero()"
---
- name: apollo.router.config.limits
  data:
    datapoints:
      - value: 1
        attributes:
          opt.operation.max_aliases: true
          opt.operation.max_depth: true
          opt.operation.max_height: true
          opt.operation.max_non_local_selections: true
          opt.operation.max_root_fields: true
          opt.operation.warn_only: true
          opt.parser.max_recursion: true
          opt.parser.max_tokens: true
          opt.request.max_size: true
