apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@query_planner_parallelism_static.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "&metrics.non_zero()"
---
- name: apollo.router.config.query_planner.parallelism
  data:
    datapoints:
      - value: 10
        attributes:
          mode: static
