apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@response_cache.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.response_cache
  data:
    datapoints:
      - value: 1
        attributes:
          opt.connector.cache_key_headers: false
          opt.connector.enabled: true
          opt.connector.invalidation.enabled: false
          opt.connector.ttl: true
          opt.debug: true
          opt.enabled: true
          opt.subgraph.enabled: true
          opt.subgraph.invalidation.enabled: true
          opt.subgraph.redis.required_to_start: true
          opt.subgraph.ttl: true
