apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@response_cache_connector_overrides.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.response_cache
  data:
    datapoints:
      - value: 1
        attributes:
          opt.connector.cache_key_headers: true
          opt.connector.enabled: true
          opt.connector.invalidation.enabled: false
          opt.connector.ttl: true
          opt.debug: false
          opt.enabled: true
          opt.subgraph.enabled: false
          opt.subgraph.invalidation.enabled: false
          opt.subgraph.redis.required_to_start: false
          opt.subgraph.ttl: false
