apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@rhai.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "&metrics.non_zero()"
---
- name: apollo.router.config.rhai
  data:
    datapoints:
      - value: 1
        attributes:
          opt.main: true
          opt.scripts: true
